# Prismatica

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
resources/: .~lock.DispatchTile.odg#  .~lock.Prismatica_Overview.odg#  .~lock.stripes.odg#  DispatchTile.odg  DispatchTile.svgz  Prismatica_Overview.odg  Prismatica_Overview.svgz
src/: main.cpp
src/include/: constants.h  intersections.h  renderer.h  utils.h
